[package]
name = "quic"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18.13"
solana-client = "1.18.13"
solana-quic-client = "1.18.13"
solana-connection-cache = "1.18.13"
solana-transaction-status = "1.18.13"

tokio = {version = "1.37.0", features = ["full"]}
bincode = "1.3.3"
bs58 = "0.5.1"
clap = { version = "4.5.4", features = ["derive"] }

dashmap = "5.5.3"
futures-util = "0.3.30"
indexmap = "2.2.6"
serde_json = "1.0.117"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
